--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "rewrites": [{ "source": "/(.*)", "destination": "/api/index" }],
+  "rewrites": [{ "source": "/(.*)", "destination": "/api/index?path=$1" }],
   "builds": [{ "src": "src/index.ts", "use": "@vercel/node" }],
   "outputDirectory": "dist"
 }
