--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,4 @@
 {
   "version": 2,
-  "rewrites": [{ "source": "/(.*)", "destination": "/api/index?path=$1" }],
-  "builds": [{ "src": "src/index.ts", "use": "@vercel/node" }],
-  "outputDirectory": "dist"
+  "rewrites": [{ "source": "/(.*)", "destination": "/src" }]
 }
