refactor: restructure project to move API code to 'api' directory and update configurations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "lib": ["es2020", "dom"],
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "api",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -12,11 +12,12 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "sourceMap": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"] // This maps "@/" to any path within the "src" directory.
+      "@/*": ["api/*"] // This maps "@/" to any path within the "src" directory.
       // So, @/entity/User will resolve to src/entity/User
     }
   },
-  "include": ["src/**/*.ts"],
+  "include": ["api/**/*.ts"],
   "exclude": ["node_modules"]
 }
