--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,4 @@
 {
   "version": 2,
-  "rewrites": [{ "source": "/(.*)", "destination": "/api" }],
-  "builds": [{ "api": "api/index.ts", "use": "@vercel/node" }],
-  "outputDirectory": "dist"
+  "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
 }
